feat: 구글 시트 연동 마무리

--- a/src/shared/i18n/messages/en.json
+++ b/src/shared/i18n/messages/en.json
@@ -1,1 +1,8 @@
-{}
+{
+  "shared": {
+    "test": "test",
+    "empty_dd": "empty {save}",
+    "locale_en": "English",
+    "locale_ko": "한국어"
+  }
+}
